Add Tic Tac Toe and Pinjaman AdaSaya pages with styles; remove unused JS files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        main {
+            display: column;
+            justify-content: center;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        .tictactoe, .pinjaman {
+            display: inline-block;
+            margin: 20px;
+            text-align: center;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            padding: 50px;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Pilih yang ingin kamu coba!</h1>
+        <section class="tictactoe">
+            <h2>Tic Tac Toe</h2>
+            <a href="tictactoe\tictactoe.html">
+                <img src="https://i.pinimg.com/736x/af/41/c7/af41c7523fb19bc5cb1de60299652a41.jpg" alt="" width="200px">
+            </a>
+        </section>
+        <section class="pinjaman">
+            <h2>Pinjaman AdaSaya</h2>
+            <a href="pinjaman\pinjaman.html">
+                <img src="https://i.pinimg.com/736x/4b/ed/84/4bed849b606f74b05a6720650ee824c7.jpg" alt="" width="200px">
+            </a>
+        </section>
+    </main>
 </body>
 </html>
