Add comments for clarity in loan interest input and Tic Tac Toe game logic

--- a/pinjaman/pinjaman.html
+++ b/pinjaman/pinjaman.html
@@ -25,6 +25,7 @@
 
                         <label>Bunga Tahunan (%):</label>
                         <input type="number" id="interestRate">
+                        <!-- Harus ditetapkan bunganya berdasarkan tenor -->
 
                         <label>Tenor (Bulan):</label>
                         <select id="loanTerm">
